--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,7 +6,8 @@
         xmlns:local="clr-namespace:NewCryptoApp"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
+
     <Grid>
-        
+        <Frame Name="MainFrame" NavigationUIVisibility="Hidden" Panel.ZIndex="1"/>
     </Grid>
 </Window>
