--- a/Core/MVVM/View/InfoPageView.xaml
+++ b/Core/MVVM/View/InfoPageView.xaml
@@ -1,14 +1,19 @@
-﻿<Page x:Class="NewCryptoApp.Core.MVVM.View.Page2"
+﻿<Page x:Class="NewCryptoApp.Core.MVVM.View.InfoPageView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:NewCryptoApp.Core.MVVM.View"
+      xmlns:viewModels="clr-namespace:NewCryptoApp.Core.MVVM.ViewModel"
+
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="Page2">
-
+      Title="InfoPageView">
+  
+    <Page.DataContext>
+        <viewModels:InfoPageViewModel   x:Name="ViewModel" />
+    </Page.DataContext>
     <Grid>
-        <Button Content="To 1" Click="Button_Click"/>
+        
     </Grid>
 </Page>
