--- a/Core/MVVM/View/MainPageView.xaml
+++ b/Core/MVVM/View/MainPageView.xaml
@@ -9,7 +9,7 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="MainPageView">
     <Page.DataContext>
-        <viewModels:MainPageViewModel x:Name="ViewModel" />
+        <viewModels:MainPageViewModel/>
     </Page.DataContext>
     <Page.Resources>
         <Style x:Key="BottomAlignedTextBoxStyle" TargetType="TextBox">
